--- a/Sunum/comp/deneme.ipynb
+++ b/Sunum/comp/deneme.ipynb
@@ -3630,7 +3630,83 @@
       "Redistribute latency...\n",
       "Pipeline is PREROLLED ...\n",
       "Setting pipeline to PLAYING ...\n",
-      "New clock: GstSystemClock\n"
+      "New clock: GstSystemClock\n",
+      "Got EOS from element \"pipeline0\".\n",
+      "Execution ended after 0:00:18.433444799\n",
+      "Setting pipeline to NULL ...\n",
+      "Freeing pipeline ...\n",
+      "Setting pipeline to PAUSED ...\n",
+      "Pipeline is PREROLLING ...\n",
+      "Redistribute latency...\n",
+      "Redistribute latency...\n",
+      "Redistribute latency...\n",
+      "Pipeline is PREROLLED ...\n",
+      "Setting pipeline to PLAYING ...\n",
+      "New clock: GstSystemClock\n",
+      "Got EOS from element \"pipeline0\".\n",
+      "Execution ended after 0:00:17.993849741\n",
+      "Setting pipeline to NULL ...\n",
+      "Freeing pipeline ...\n",
+      "Setting pipeline to PAUSED ...\n",
+      "Pipeline is PREROLLING ...\n",
+      "Redistribute latency...\n",
+      "Redistribute latency...\n",
+      "Redistribute latency...\n",
+      "Pipeline is PREROLLED ...\n",
+      "Setting pipeline to PLAYING ...\n",
+      "New clock: GstSystemClock\n",
+      "Got EOS from element \"pipeline0\".\n",
+      "Execution ended after 0:00:17.493401309\n",
+      "Setting pipeline to NULL ...\n",
+      "Freeing pipeline ...\n",
+      "Setting pipeline to PAUSED ...\n",
+      "Pipeline is PREROLLING ...\n",
+      "Redistribute latency...\n",
+      "Redistribute latency...\n",
+      "Redistribute latency...\n",
+      "Pipeline is PREROLLED ...\n",
+      "Setting pipeline to PLAYING ...\n",
+      "New clock: GstSystemClock\n",
+      "Got EOS from element \"pipeline0\".\n",
+      "Execution ended after 0:00:10.089236109\n",
+      "Setting pipeline to NULL ...\n",
+      "Freeing pipeline ...\n",
+      "Setting pipeline to PAUSED ...\n",
+      "Pipeline is PREROLLING ...\n",
+      "Redistribute latency...\n",
+      "Redistribute latency...\n",
+      "Redistribute latency...\n",
+      "Pipeline is PREROLLED ...\n",
+      "Setting pipeline to PLAYING ...\n",
+      "New clock: GstSystemClock\n",
+      "Got EOS from element \"pipeline0\".\n",
+      "Execution ended after 0:00:10.041509800\n",
+      "Setting pipeline to NULL ...\n",
+      "Freeing pipeline ...\n",
+      "Setting pipeline to PAUSED ...\n",
+      "Pipeline is PREROLLING ...\n",
+      "Redistribute latency...\n",
+      "Redistribute latency...\n",
+      "Redistribute latency...\n",
+      "Pipeline is PREROLLED ...\n",
+      "Setting pipeline to PLAYING ...\n",
+      "New clock: GstSystemClock\n",
+      "Got EOS from element \"pipeline0\".\n",
+      "Execution ended after 0:00:10.112409929\n",
+      "Setting pipeline to NULL ...\n",
+      "Freeing pipeline ...\n",
+      "Setting pipeline to PAUSED ...\n",
+      "Pipeline is PREROLLING ...\n",
+      "Redistribute latency...\n",
+      "Redistribute latency...\n",
+      "Redistribute latency...\n",
+      "Pipeline is PREROLLED ...\n",
+      "Setting pipeline to PLAYING ...\n",
+      "New clock: GstSystemClock\n",
+      "Got EOS from element \"pipeline0\".\n",
+      "Execution ended after 0:00:10.031062113\n",
+      "Setting pipeline to NULL ...\n",
+      "Freeing pipeline ...\n"
      ]
     }
    ],
@@ -3646,7 +3722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -3743,40 +3819,113 @@
        "      <td>147.794 MegaBytes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>0</td>\n",
-       "      <td>true</td>\n",
-       "      <td>100</td>\n",
-       "      <td>0</td>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>257</th>\n",
+       "      <td>1000</td>\n",
+       "      <td>false</td>\n",
+       "      <td>250</td>\n",
+       "      <td>50</td>\n",
+       "      <td>51</td>\n",
        "      <td>10</td>\n",
+       "      <td>2</td>\n",
+       "      <td>false</td>\n",
+       "      <td>150.497 MegaBytes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>258</th>\n",
+       "      <td>1000</td>\n",
+       "      <td>false</td>\n",
+       "      <td>250</td>\n",
+       "      <td>50</td>\n",
+       "      <td>51</td>\n",
        "      <td>51</td>\n",
        "      <td>0</td>\n",
        "      <td>true</td>\n",
-       "      <td>14.484 MegaBytes</td>\n",
+       "      <td>3.142 MegaBytes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>259</th>\n",
+       "      <td>1000</td>\n",
+       "      <td>false</td>\n",
+       "      <td>250</td>\n",
+       "      <td>50</td>\n",
+       "      <td>51</td>\n",
+       "      <td>51</td>\n",
+       "      <td>0</td>\n",
+       "      <td>false</td>\n",
+       "      <td>3.141 MegaBytes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>260</th>\n",
+       "      <td>1000</td>\n",
+       "      <td>false</td>\n",
+       "      <td>250</td>\n",
+       "      <td>50</td>\n",
+       "      <td>51</td>\n",
+       "      <td>51</td>\n",
+       "      <td>2</td>\n",
+       "      <td>true</td>\n",
+       "      <td>3.142 MegaBytes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>261</th>\n",
+       "      <td>1000</td>\n",
+       "      <td>false</td>\n",
+       "      <td>250</td>\n",
+       "      <td>50</td>\n",
+       "      <td>51</td>\n",
+       "      <td>51</td>\n",
+       "      <td>2</td>\n",
+       "      <td>false</td>\n",
+       "      <td>3.141 MegaBytes</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>262 rows × 9 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "  vbv-buf-capacity trellis sync-lookahead quantizer qp-min qp-max ip-factor  \\\n",
-       "0              600    true             -1        21     10     51       1.4   \n",
-       "1                0    true            100         0     10     10         0   \n",
-       "2                0    true            100         0     10     10         0   \n",
-       "3                0    true            100         0     10     10         2   \n",
-       "4                0    true            100         0     10     10         2   \n",
-       "5                0    true            100         0     10     51         0   \n",
+       "    vbv-buf-capacity trellis sync-lookahead quantizer qp-min qp-max ip-factor  \\\n",
+       "0                600    true             -1        21     10     51       1.4   \n",
+       "1                  0    true            100         0     10     10         0   \n",
+       "2                  0    true            100         0     10     10         0   \n",
+       "3                  0    true            100         0     10     10         2   \n",
+       "4                  0    true            100         0     10     10         2   \n",
+       "..               ...     ...            ...       ...    ...    ...       ...   \n",
+       "257             1000   false            250        50     51     10         2   \n",
+       "258             1000   false            250        50     51     51         0   \n",
+       "259             1000   false            250        50     51     51         0   \n",
+       "260             1000   false            250        50     51     51         2   \n",
+       "261             1000   false            250        50     51     51         2   \n",
        "\n",
-       "  b-pyramid          MegaBytes  \n",
-       "0     false   23.332 MegaBytes  \n",
-       "1      true  147.536 MegaBytes  \n",
-       "2     false  147.794 MegaBytes  \n",
-       "3      true  147.536 MegaBytes  \n",
-       "4     false  147.794 MegaBytes  \n",
-       "5      true   14.484 MegaBytes  "
+       "    b-pyramid          MegaBytes  \n",
+       "0       false   23.332 MegaBytes  \n",
+       "1        true  147.536 MegaBytes  \n",
+       "2       false  147.794 MegaBytes  \n",
+       "3        true  147.536 MegaBytes  \n",
+       "4       false  147.794 MegaBytes  \n",
+       "..        ...                ...  \n",
+       "257     false  150.497 MegaBytes  \n",
+       "258      true    3.142 MegaBytes  \n",
+       "259     false    3.141 MegaBytes  \n",
+       "260      true    3.142 MegaBytes  \n",
+       "261     false    3.141 MegaBytes  \n",
+       "\n",
+       "[262 rows x 9 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3787,11 +3936,225 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "dff.to_csv('others_kombinasyon.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>vbv-buf-capacity</th>\n",
+       "      <th>trellis</th>\n",
+       "      <th>sync-lookahead</th>\n",
+       "      <th>quantizer</th>\n",
+       "      <th>qp-min</th>\n",
+       "      <th>qp-max</th>\n",
+       "      <th>ip-factor</th>\n",
+       "      <th>b-pyramid</th>\n",
+       "      <th>MegaBytes</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>66</th>\n",
+       "      <td>0</td>\n",
+       "      <td>true</td>\n",
+       "      <td>250</td>\n",
+       "      <td>50</td>\n",
+       "      <td>51</td>\n",
+       "      <td>51</td>\n",
+       "      <td>0</td>\n",
+       "      <td>true</td>\n",
+       "      <td>3.386 MegaBytes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>162</th>\n",
+       "      <td>1000</td>\n",
+       "      <td>true</td>\n",
+       "      <td>100</td>\n",
+       "      <td>50</td>\n",
+       "      <td>51</td>\n",
+       "      <td>51</td>\n",
+       "      <td>0</td>\n",
+       "      <td>true</td>\n",
+       "      <td>3.386 MegaBytes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>68</th>\n",
+       "      <td>0</td>\n",
+       "      <td>true</td>\n",
+       "      <td>250</td>\n",
+       "      <td>50</td>\n",
+       "      <td>51</td>\n",
+       "      <td>51</td>\n",
+       "      <td>2</td>\n",
+       "      <td>true</td>\n",
+       "      <td>3.386 MegaBytes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>194</th>\n",
+       "      <td>1000</td>\n",
+       "      <td>true</td>\n",
+       "      <td>250</td>\n",
+       "      <td>50</td>\n",
+       "      <td>51</td>\n",
+       "      <td>51</td>\n",
+       "      <td>0</td>\n",
+       "      <td>true</td>\n",
+       "      <td>3.386 MegaBytes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>178</th>\n",
+       "      <td>1000</td>\n",
+       "      <td>true</td>\n",
+       "      <td>250</td>\n",
+       "      <td>0</td>\n",
+       "      <td>51</td>\n",
+       "      <td>51</td>\n",
+       "      <td>0</td>\n",
+       "      <td>true</td>\n",
+       "      <td>3.386 MegaBytes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>138</th>\n",
+       "      <td>1000</td>\n",
+       "      <td>true</td>\n",
+       "      <td>100</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>51</td>\n",
+       "      <td>0</td>\n",
+       "      <td>true</td>\n",
+       "      <td>13.905 MegaBytes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>234</th>\n",
+       "      <td>1000</td>\n",
+       "      <td>false</td>\n",
+       "      <td>250</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>51</td>\n",
+       "      <td>0</td>\n",
+       "      <td>true</td>\n",
+       "      <td>13.903 MegaBytes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>170</th>\n",
+       "      <td>1000</td>\n",
+       "      <td>true</td>\n",
+       "      <td>250</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>51</td>\n",
+       "      <td>0</td>\n",
+       "      <td>true</td>\n",
+       "      <td>13.903 MegaBytes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>154</th>\n",
+       "      <td>1000</td>\n",
+       "      <td>true</td>\n",
+       "      <td>100</td>\n",
+       "      <td>50</td>\n",
+       "      <td>10</td>\n",
+       "      <td>51</td>\n",
+       "      <td>0</td>\n",
+       "      <td>true</td>\n",
+       "      <td>13.902 MegaBytes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>218</th>\n",
+       "      <td>1000</td>\n",
+       "      <td>false</td>\n",
+       "      <td>100</td>\n",
+       "      <td>50</td>\n",
+       "      <td>10</td>\n",
+       "      <td>51</td>\n",
+       "      <td>0</td>\n",
+       "      <td>true</td>\n",
+       "      <td>13.889 MegaBytes</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>262 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    vbv-buf-capacity trellis sync-lookahead quantizer qp-min qp-max ip-factor  \\\n",
+       "66                 0    true            250        50     51     51         0   \n",
+       "162             1000    true            100        50     51     51         0   \n",
+       "68                 0    true            250        50     51     51         2   \n",
+       "194             1000    true            250        50     51     51         0   \n",
+       "178             1000    true            250         0     51     51         0   \n",
+       "..               ...     ...            ...       ...    ...    ...       ...   \n",
+       "138             1000    true            100         0     10     51         0   \n",
+       "234             1000   false            250         0     10     51         0   \n",
+       "170             1000    true            250         0     10     51         0   \n",
+       "154             1000    true            100        50     10     51         0   \n",
+       "218             1000   false            100        50     10     51         0   \n",
+       "\n",
+       "    b-pyramid         MegaBytes  \n",
+       "66       true   3.386 MegaBytes  \n",
+       "162      true   3.386 MegaBytes  \n",
+       "68       true   3.386 MegaBytes  \n",
+       "194      true   3.386 MegaBytes  \n",
+       "178      true   3.386 MegaBytes  \n",
+       "..        ...               ...  \n",
+       "138      true  13.905 MegaBytes  \n",
+       "234      true  13.903 MegaBytes  \n",
+       "170      true  13.903 MegaBytes  \n",
+       "154      true  13.902 MegaBytes  \n",
+       "218      true  13.889 MegaBytes  \n",
+       "\n",
+       "[262 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dff.sort_values('MegaBytes',ascending=False)"
    ]
   },
   {
