--- a/Sunum/comp/cpu_values.ipynb
+++ b/Sunum/comp/cpu_values.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,11 +15,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(10):\n",
+    "for i in range(15):\n",
     "    load1, load5, load15 = psutil.getloadavg()\n",
     "    total_memory, used_memory, free_memory = map(int, os.popen('free -t -m').readlines()[-1].split()[1:])\n",
     "    \n",
@@ -40,7 +40,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.loc[len(df)]=[df['RAM_Usage(%)'].mean(),df['RAM_Usage(GB)'].mean(),df['CPU_Mean_Usage(%)'].mean(),df['GPU_Usage(GB)'].mean()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -73,99 +82,156 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>13.97</td>\n",
-       "      <td>4.99</td>\n",
-       "      <td>86.0625</td>\n",
-       "      <td>0.368347</td>\n",
+       "      <td>28.240</td>\n",
+       "      <td>5.290</td>\n",
+       "      <td>13.170000</td>\n",
+       "      <td>0.890000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>13.91</td>\n",
-       "      <td>4.97</td>\n",
-       "      <td>86.0625</td>\n",
-       "      <td>0.376953</td>\n",
+       "      <td>28.300</td>\n",
+       "      <td>5.300</td>\n",
+       "      <td>13.080000</td>\n",
+       "      <td>0.890000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>13.90</td>\n",
-       "      <td>4.96</td>\n",
-       "      <td>86.0625</td>\n",
-       "      <td>0.377991</td>\n",
+       "      <td>28.320</td>\n",
+       "      <td>5.310</td>\n",
+       "      <td>13.080000</td>\n",
+       "      <td>0.900000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>13.96</td>\n",
-       "      <td>4.98</td>\n",
-       "      <td>86.0000</td>\n",
-       "      <td>0.365784</td>\n",
+       "      <td>28.330</td>\n",
+       "      <td>5.310</td>\n",
+       "      <td>13.080000</td>\n",
+       "      <td>0.900000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>13.98</td>\n",
-       "      <td>4.99</td>\n",
-       "      <td>86.0000</td>\n",
-       "      <td>0.388855</td>\n",
+       "      <td>28.330</td>\n",
+       "      <td>5.310</td>\n",
+       "      <td>13.170000</td>\n",
+       "      <td>0.880000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>14.02</td>\n",
-       "      <td>5.00</td>\n",
-       "      <td>86.0000</td>\n",
-       "      <td>0.376038</td>\n",
+       "      <td>28.310</td>\n",
+       "      <td>5.310</td>\n",
+       "      <td>13.170000</td>\n",
+       "      <td>0.880000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>14.03</td>\n",
-       "      <td>5.01</td>\n",
-       "      <td>85.8125</td>\n",
-       "      <td>0.376038</td>\n",
+       "      <td>28.380</td>\n",
+       "      <td>5.320</td>\n",
+       "      <td>13.080000</td>\n",
+       "      <td>0.880000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>14.04</td>\n",
-       "      <td>5.01</td>\n",
-       "      <td>85.8125</td>\n",
-       "      <td>0.370117</td>\n",
+       "      <td>28.230</td>\n",
+       "      <td>5.290</td>\n",
+       "      <td>13.080000</td>\n",
+       "      <td>0.880000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>14.07</td>\n",
-       "      <td>5.02</td>\n",
-       "      <td>85.9375</td>\n",
-       "      <td>0.332458</td>\n",
+       "      <td>28.410</td>\n",
+       "      <td>5.330</td>\n",
+       "      <td>13.080000</td>\n",
+       "      <td>0.870000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>13.99</td>\n",
-       "      <td>5.00</td>\n",
-       "      <td>85.9375</td>\n",
-       "      <td>0.332458</td>\n",
+       "      <td>28.360</td>\n",
+       "      <td>5.320</td>\n",
+       "      <td>13.250000</td>\n",
+       "      <td>0.880000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>28.260</td>\n",
+       "      <td>5.300</td>\n",
+       "      <td>13.250000</td>\n",
+       "      <td>0.880000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>28.280</td>\n",
+       "      <td>5.300</td>\n",
+       "      <td>13.250000</td>\n",
+       "      <td>0.870000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>28.280</td>\n",
+       "      <td>5.300</td>\n",
+       "      <td>13.250000</td>\n",
+       "      <td>0.870000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>28.300</td>\n",
+       "      <td>5.300</td>\n",
+       "      <td>13.170000</td>\n",
+       "      <td>0.870000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>28.260</td>\n",
+       "      <td>5.300</td>\n",
+       "      <td>13.170000</td>\n",
+       "      <td>0.870000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>28.306</td>\n",
+       "      <td>5.306</td>\n",
+       "      <td>13.155333</td>\n",
+       "      <td>0.880667</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   RAM_Usage(%)  RAM_Usage(GB)  CPU_Mean_Usage(%)  GPU_Usage(GB)\n",
-       "0         13.97           4.99            86.0625       0.368347\n",
-       "1         13.91           4.97            86.0625       0.376953\n",
-       "2         13.90           4.96            86.0625       0.377991\n",
-       "3         13.96           4.98            86.0000       0.365784\n",
-       "4         13.98           4.99            86.0000       0.388855\n",
-       "5         14.02           5.00            86.0000       0.376038\n",
-       "6         14.03           5.01            85.8125       0.376038\n",
-       "7         14.04           5.01            85.8125       0.370117\n",
-       "8         14.07           5.02            85.9375       0.332458\n",
-       "9         13.99           5.00            85.9375       0.332458"
+       "    RAM_Usage(%)  RAM_Usage(GB)  CPU_Mean_Usage(%)  GPU_Usage(GB)\n",
+       "0         28.240          5.290          13.170000       0.890000\n",
+       "1         28.300          5.300          13.080000       0.890000\n",
+       "2         28.320          5.310          13.080000       0.900000\n",
+       "3         28.330          5.310          13.080000       0.900000\n",
+       "4         28.330          5.310          13.170000       0.880000\n",
+       "5         28.310          5.310          13.170000       0.880000\n",
+       "6         28.380          5.320          13.080000       0.880000\n",
+       "7         28.230          5.290          13.080000       0.880000\n",
+       "8         28.410          5.330          13.080000       0.870000\n",
+       "9         28.360          5.320          13.250000       0.880000\n",
+       "10        28.260          5.300          13.250000       0.880000\n",
+       "11        28.280          5.300          13.250000       0.870000\n",
+       "12        28.280          5.300          13.250000       0.870000\n",
+       "13        28.300          5.300          13.170000       0.870000\n",
+       "14        28.260          5.300          13.170000       0.870000\n",
+       "15        28.306          5.306          13.155333       0.880667"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('decodebin_double.csv')"
    ]
   },
   {
